modules/emulandice/AIS/test/test.err
/home/rk509/facts/modules/emulandice/AIS/test/../../../../scripts/moduletest/moduletest.sh: line 43: run_moduletest.sh: No such file or directory
  File "/scratch/rk509/test.1667939760/emulandice_project_AIS.py", line 124
    subprocess.run(["bash emulandice_steer.sh \'" + emulandice_dataset + "\' " + nsamps)
                                                                                       ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
ls: cannot access AIS-emulandice-AIS-ssp585*.nc: No such file or directory
mv: cannot stat ‘AIS-emulandice-AIS-ssp585*.nc’: No such file or directory
